--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git+https://github.com/zugzw4ng/ecommerce-backend.git"
   },
   "keywords": [],
   "author": "jacob kelly",
@@ -22,7 +22,7 @@
   "dependencies": {
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
+    "mysql2": "^2.3.0",
     "sequelize": "^5.22.4"
   }
 }
